<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:visibility="visible"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/expensePerPersonTextView"
            style="@style/results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/_0"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView2"
            style="@style/labels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/per_person"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:id="@+id/inputsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                style="@style/sm_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_bill"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/billEdittext"
                style="@style/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:text="@string/_0"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/textView4"
                style="@style/sm_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/generous_tip"
                android:textColor="#FFFFFF" />

            <LinearLayout
                android:id="@+id/tipLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/subtractTipButton"
                    style="@style/button"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/subtract_tip"
                    android:onClick="onClick"
                    app:srcCompat="@drawable/subtract" />

                <TextView
                    android:id="@+id/tipTextView"
                    style="@style/input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:text="@string/_20"
                    android:textColor="#FFFFFF" />

                <ImageButton
                    android:id="@+id/addTipButton"
                    style="@style/button"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="TODO"
                    android:onClick="onClick"
                    app:srcCompat="@drawable/add" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView6"
                style="@style/sm_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Number of People"
                android:textColor="#FFFFFF" />

            <LinearLayout
                android:id="@+id/peopleLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/subtractPeopleButton"
                    style="@style/button"
                    android:layout_marginStart="20dp"
                    android:onClick="onClick"
                    app:srcCompat="@drawable/subtract" />

                <TextView
                    android:id="@+id/numberOfPeopleTextView"
                    style="@style/input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:text="@string/_4"
                    android:textColor="#FFFFFF" />

                <ImageButton
                    android:id="@+id/addPeopleButton"
                    style="@style/button"
                    android:layout_marginEnd="20dp"
                    android:onClick="onClick"
                    app:srcCompat="@drawable/add"
                    android:contentDescription="TODO" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>